WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278534
REGRESSION (
280886@main
) ReportingObserver can be garbage collected while a task is queued to make report callbacks.
https://bugs.webkit.org/show_bug.cgi?id=278534
Summary
REGRESSION (280886@main) ReportingObserver can be garbage collected while a t...
Ryan Reno
Reported
2024-08-22 12:23:15 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Ryan Reno
Comment 1
2024-08-22 12:23:16 PDT
<
rdar://problem/133409507
>
Ryan Reno
Comment 2
2024-08-22 13:15:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32603
EWS
Comment 3
2024-08-22 20:30:05 PDT
Committed
282645@main
(b5502f0dc670): <
https://commits.webkit.org/282645@main
> Reviewed commits have been landed. Closing PR #32603 and removing active labels.
EWS
Comment 4
2024-08-23 13:14:09 PDT
Committed
280938.264@safari-7619-branch
(e4a60784524d): <
https://commits.webkit.org/280938.264@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1642 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug