Cherry-pick 282645@main (b5502f0dc670). https://bugs.webkit.org/show_bug.cgi?id=278534

REGRESSION (280886@main) ReportingObserver can be garbage collected while a task is queued to make report callbacks.
    https://bugs.webkit.org/show_bug.cgi?id=278534
    rdar://133409507

    Reviewed by Brent Fulgham.

    In 280886@main I tied the lifetime of the ReportingObserver object to
    whether or not it is observing reports by making it an ActiveDOMObject.
    In some cases (especially imported/w3c/web-platform-tests/reporting/disconnect.html)
    the object and its callback can be garbage collected while there's an
    outstanding task to make the callback with its reports which can
    cause a null pointer dereference when attempting to invoke the callback.

    This change will keep the object alive until after the callback has been
    serviced, even if all references are dropped and the ReportingObserver
    has disconnected.

    * Source/WebCore/Modules/reporting/ReportingObserver.cpp:
    (WebCore::ReportingObserver::appendQueuedReportIfCorrectType):

    Canonical link: https://commits.webkit.org/282645@main

Canonical link: https://commits.webkit.org/282416.152@webkitglib/2.46